Larger font size to prevent zooming on ios

--- a/Øljeopardy/Styles/Main.scss
+++ b/Øljeopardy/Styles/Main.scss
@@ -126,3 +126,7 @@ h1, h2 {
 .up-down-table {
     margin: 8px 0 0 -100%;
 }
+
+.form-control {
+    font-size: 16px;
+}
